Added export visitor, serialization function for shapes, fixed inconsistencies in naming

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_executable(PPIL_Paint_client
 	#Header
 	SocketDrawClient.hpp
-	Visitors/VisitorDraw.hpp
+	Visitors/VisitorShape.hpp
 	Visitors/VisitorDrawNetwork.hpp
+	Visitors/VisitorExportCustom.hpp
 	Utils/Matrice2x2.hpp
 	Utils/Vecteur2D.hpp
 	Shapes/Circle.hpp
